fix: shifted elements around in register and login pages

--- a/wwwroot/assets/css/profilePage.css
+++ b/wwwroot/assets/css/profilePage.css
@@ -66,6 +66,7 @@
     position: fixed;
     top: 80px;
     left: 0;
+    z-index: 3;
 }
 
 .userInfoSidebar h3 {
