--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -518,7 +518,8 @@ body {
     font-family: Arial, sans-serif;
     align-self: center;
     font-size: 50px;
-    margin: 0;
+    margin: 20px 0 0 0;
+    width: 83%;
 }
 
 ::placeholder {
@@ -679,7 +680,10 @@ body {
 .buttonRow {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
+    align-self: center;
+    width: 83%;
+    padding-bottom: 30px;
     gap: 10px;
 }
 
@@ -946,10 +950,11 @@ input:-webkit-autofill:active{
     background-image: linear-gradient(to bottom right, rgb(11, 11, 11), rgb(2, 5, 8));
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     height: auto;
-    margin-top: 80px;
+    margin-top: 20px;
     margin-bottom: 0;
     position: relative;
     top: 40px;
+    z-index: 2;
 }
 
 .corpoFiller {
@@ -1187,30 +1192,6 @@ input:-webkit-autofill:active{
     padding: 15px 50px 15px;
     /* width: 30%; */
 }
-
-/* .addAwnserPopup {
-    position: fixed;
-    align-self: center;
-    top: 10vh;
-    height: 500px;
-    width: 76%;
-    background-color: #241e1e;
-    z-index: 101;
-    border-radius: 5px;
-    padding: 15px;
-    border: solid 2px rgb(227, 40, 53);
-}
-
-.backgroundOppaciter {
-    z-index: 100;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #000000;
-    height: 100vh;
-    width: 100vw;
-    opacity: 0.7;
-} */
 
 .awnsers {
     align-self: flex-end;
